--- a/theme/templates/admin/index.html
+++ b/theme/templates/admin/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div>
-<!--    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <div class="panel panel-white">
             <div class="panel-heading">
                 <h2>Мой профиль</h2>
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
     {% if request.user.shop %}
         <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
         <div class="panel panel-white">
