--- a/theme/templates/email/account_approve.html
+++ b/theme/templates/email/account_approve.html
@@ -1,3 +1,4 @@
+{% extends "email/base.html" %}
 {% load i18n accounts_tags %}
 {% block main %}
 <p>{% trans "Hey there, a new account has been created and requires activation." %}</p>
