--- a/theme/templates/email/account_approved.html
+++ b/theme/templates/email/account_approved.html
@@ -1,3 +1,4 @@
+{% extends "email/base.html" %}
 {% load i18n %}
 {% block main %}
 <p>{% trans "Hey there, your account has been activated." %}</p>
