--- a/theme/templates/email/password_reset_verify.html
+++ b/theme/templates/email/password_reset_verify.html
@@ -1,3 +1,4 @@
+{% extends "email/base.html" %}
 {% load i18n %}
 {% block main %}
 <p>{% trans "Hey there, the password reset form was used for your account." %}</p>
