--- a/theme/templates/includes/user_panel.html
+++ b/theme/templates/includes/user_panel.html
@@ -2,9 +2,9 @@
 <div class="twelve columns">
 		<div id="additional-menu">
 			<ul>
-				<li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.facebook.com/groups/803193513100186"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.instagram.com/handmakertop/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+				<!--<li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>-->
 			</ul>
 		</div>
 	</div>
