--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -4518,9 +4518,9 @@ blockquote {
     display: block;
     position: relative;
     float: left;
-}
+}*/
 
-.tp-simpleresponsive .caption {
+/*.tp-simpleresponsive .caption {
     position: absolute;
     visibility: hidden;
     -webkit-font-smoothing: antialiased!important;
@@ -4528,9 +4528,9 @@ blockquote {
 
 .tp-simpleresponsive img {
     max-width: none;
-}
+}*/
 
-a.caption-btn {
+/*a.caption-btn {
     cursor: pointer;
     padding: 15px 25px;
     display: inline-block;
