--- a/theme/templates/admin/auth/user/change_password.html
+++ b/theme/templates/admin/auth/user/change_password.html
@@ -6,33 +6,15 @@
 {% endblock %}
 
 {% block extrastyle %}
-  {{ block.super }}
-  <link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}" />
+
 {% endblock %}
 
-{% block bodyclass %}{{ block.super }} {{ opts.app_label }}-{{ opts.model_name }} change-form{% endblock %}
-
-{% if not is_popup %}
-  {% block breadcrumbs %}
-    <ol class="breadcrumb">
-      <li class="home">
-        <a href="{% url 'admin:index' %}" title="{% trans 'Home' %}"><span class="glyphicon glyphicon-home"></span></a>
-      </li>
-      <li>
-        <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
-      </li>
-      <li>
-        <a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>
-      </li>
-      <li>
-        <a href="{% url opts|admin_urlname:'change' original.pk|admin_urlquote %}">{{ original|truncatewords:"18" }}</a>
-      </li>
-      <li>
-        {% trans 'Change password' %}
-      </li>
-    </ol>
-  {% endblock %}
-{% endif %}
+{% block breadcrumbs %}
+<ol class="breadcrumb">
+      <li><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a></li>
+      <li><a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a></li>
+  </ol>
+{% endblock %}
 
 {% block content %}
   <div id="content-main">
