--- a/theme/templates/admin/includes/field.html
+++ b/theme/templates/admin/includes/field.html
@@ -1,6 +1,6 @@
 {% load theme_tags %}
 <div class="form-group {% if line.fields|length_is:'1' and line.errors %} has-error{% endif %}{% if not line.has_visible_field %} hidden {% endif %}{% for field in line %}{% if field.field.name %} field-{{ field.field.name }} {% endif %}{% endfor %}{% if not line.fields|length_is:'1' %} field-box {{ css_field_box }}{% endif %}{% if not css_field_box and not is_tabular %}{% if field.field|widget_type == 'tinymcewidget' or field.field|widget_type == 'filteredselectmultiple' or field.field|widget_type == 'datagroupselect' %} col-sm-12 {% else %} col-sm-6 {% endif %}{% endif %}">
-    {% if field.is_checkbox %}
+    {% if field.is_checkbox  %}
       <div class="{% if field.field.name == 'pre_order'  %}togglebutton{% else %}checkbox{% endif %}">
         {% if not is_tabular %}
           <label>
@@ -34,8 +34,15 @@
               {% if field.is_readonly %}
                 <p>{{ field.contents|linebreaksbr }}</p>
               {% else %}
-                {% if widget_type == 'adminradioselect' or widget_type == 'checkboxselectmultiple' or widget_type == 'readonlypasswordhashwidget' or widget_type == 'adminfilewidget' %}
+                {% if widget_type == 'checkboxselectmultiple' or widget_type == 'readonlypasswordhashwidget' or widget_type == 'adminfilewidget' %}
                   {{ field.field }}
+                {% elif widget_type == 'adminradioselect' %}
+                <div class="radio radio-inline" style="margin-top: 0px;">
+                  {{ field.field.0 }}
+                </div>
+                <div class="radio radio-inline">
+                  {{ field.field.1 }}
+                </div>
                 {% else %}
                   {{ field.field|add_class:"form-control" }}
                 {% endif %}
