--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -206,7 +206,7 @@
 <div id="footer-bottom">
 	<div class="container">
 		<div class="eight columns">
-			<!--<a href="{# {% url 'true_index' %} #}">handmaker.top</a></div>-->
+			<a href="{# {% url 'true_index' %} #}">handmaker.top</a></div>
 		</div>
 	</div>
 </div>
