--- a/theme/templates/email/order_email_request_approved.html
+++ b/theme/templates/email/order_email_request_approved.html
@@ -1,4 +1,4 @@
-{% extends "order/email_base.html" %}
+{% extends "email/base.html" %}
 {% load static mezzanine_tags accounts_tags %}
 {% block main %}
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -9,7 +9,7 @@
     </tr>
     <tr>
         <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
-            Вы опубликовали на сайте <a href="http://{{ request.get_host }}">handmaker.top</a> заказ - <a href="http://{{ request.get_host }}{{ order.get_absolute_url }}">{{ order }}</a>, для которого нашелся исполнитель: <a href="http://{{ request.get_host }}{% url 'profile_view' %}">{{ performer|username_or:"get_full_name" }}</a>
+            Вы опубликовали на сайте <a href="http://{{ request.get_host }}">handmaker.top</a> заказ - <a href="http://{{ request.get_host }}{{ order.get_absolute_url }}">{{ order }}</a>, для которого нашелся исполнитель: <a href="http://{{ request.get_host }}{% url 'profile' performer %}">{{ performer.profile.get_full_name }}</a>
         </td>
     </tr>
     {% if message %}
