--- a/theme/templates/email/shop_message_send.html
+++ b/theme/templates/email/shop_message_send.html
@@ -1,4 +1,4 @@
-{% extends "order/email_base.html" %}
+{% extends "email/base.html" %}
 {% load static mezzanine_tags accounts_tags %}
 {% block main %}
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
