--- a/theme/templates/email/signup_verify.html
+++ b/theme/templates/email/signup_verify.html
@@ -1,4 +1,4 @@
-{% extends "order/email_base.html" %}
+{% extends "email/base.html" %}
 {% load i18n %}
 {% block main %}
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -14,7 +14,5 @@
         </td>
     </tr>
 </table>
-
-<p></p>
 {% endblock %}
 
