--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -1,5 +1,4 @@
 {% extends "pages/page.html" %}
-
 {% load mezzanine_tags shop_tags i18n theme_tags pages_tags static  %}
 {% block body_id %}category{% endblock %}
 
@@ -9,95 +8,15 @@
 
 
 {% block main_containter %}
-<section class="woo-search" style="background-image: url({% static 'images/search.jpg' %})">
-	<form method="get" class="search-form" action="#" role="search">
-
-		<div class="woo-search-main">
-			<label for="s">Поиск товаров:</label>
-			<input value="" name="s" id="s" placeholder="Красные майки" autocomplete="off" type="text">
-			<button><i class="fa fa-search"></i></button>
-		</div>
-<!--		<a href="#" class="advanced-search-btn button">Advanced Search <i class="fa fa-caret-down"></i></a>-->
-
-<!--		<div class="woo-search-elements clearfix">
-
-			<!~~ Variables ~~>
-			<section class="variables">
-
-				<select id="size" name="size">
-					<option>Categories</option>
-					<option>Bags</option>
-					<option>Discounted</option>
-					<option>e-books</option>
-					<option>Longsleeves</option>
-					<option>Shirts</option>
-				</select>
-
-				<select id="size" name="size">
-					<option>Size</option>
-					<option>S</option>
-					<option>M</option>
-					<option>L</option>
-					<option>XL</option>
-				</select>
-
-				<select id="color" name="color">
-					<option>Color</option>
-					<option>Blue</option>
-					<option>Green</option>
-					<option>Red</option>
-				</select>
-			</section>
-
-			<div id="price-range">
-				<div class="padding-range"><div id="slider-range-alt"></div></div>
-				<label for="amount">Price:</label>
-				<input type="text" id="amount"/>
-			</div>
-			<div class="clearfix"></div>
-
-		</div>-->
-
-	</form>
-</section>
 <div class="container">
 {% if sub_categories %}
-<!-- Filters -->
-	<!-- <div class="sixteen columns">
-		<div id="filters" class="filters-dropdown headline"><span></span>
-			<ul class="option-set" data-option-key="filter">
-			{% if no_child %}
-				<li><a href="#filter" class="selected" data-filter="*">Все</a></li>
-			{% endif %}
-			{% for category in sub_categories %}
-				<li><a href="#filter" 
-				{% if forloop.first and not no_child %}class="selected"{% endif %} 
-				data-filter=".{{category.title|hard_trim}}">{{category.title|title}}</a></li>
-			{% endfor %}
-			</ul>
-		</div>
-	</div>
-	<div class="clearfix"></div> -->
-
 	<div id="portfolio-wrapper">
 	{% for category in sub_child_categories %}
-		<!-- Portfolio Item -->
 		<div class="four columns portfolio-item custom_column
-		{% if no_child %}
-			{{category.title|hard_trim}}
-		{% else %}
-			{{category.parent.title|hard_trim}}
-		{% endif %}
-		">
+		{% if no_child %}{{category.title|hard_trim}}{% else %}{{category.parent.title|hard_trim}}{% endif %}">
 			<figure>
 				<div class="portfolio-holder">
-					<a href="{{ category.get_absolute_url }}
-					{% if request.GET.pre_order == '1' %}
-					?pre_order=1
-					{% elif request.GET.pre_order == '0' %}
-					?pre_order=0
-					{% endif %}
-					">
+					<a href="{{ category.get_absolute_url }}">
 					{% if settings.SHOP_CATEGORY_USE_FEATURED_IMAGE %}
 						{% if category.featured_image %}
 							<img alt="" src="{{ MEDIA_URL }}{% thumbnail category.featured_image 280 280 %}"/>
@@ -115,20 +34,17 @@
 						<div class="hover-icon"></div>
 					</a>
 				</div>
-
 				<a href="{{ category.get_absolute_url }}">
 					<section class="item-description">
 						<span>{{ category.parent.title }}</span>
 						<h5>{{ category.title|smart_truncate_chars:35 }}</h5>
 					</section>
 				</a>
-
 			</figure>
 		</div>
 	{% endfor %}
 	</div>
 {% endif %} 
-<!-- </div> -->
 </div>
 {{ block.super }}
 {% endblock %}
@@ -141,103 +57,69 @@
 		{% shop_menu "pages/menus/shop_tree.html" %}
 		<div class="clearfix"></div>
 	</div>
+
 	<!-- filters -->
-<!-- <div class="widget">
- 		<h3 class="headline">Сортировать по цене</h3><span class="line"></span><div class="clearfix"></div>
+<form method="GET">
+	<div class="widget">
+	    <h3 class="headline">Цена</h3><span class="line"></span>
+	    <div class="clearfix"></div>
+	    <div class="input_price">
+	    	<span>от</span>
+	    	<input class="" id="id_min_price" name="min_price" step="1" type="number" {% if request.GET.min_price %}value="{{ request.GET.min_price }}"{% endif %}>
+	    </div><!-- -->
+	    <div class="input_price">
+	    	<span>до</span>
+	    	<input class="" id="id_max_price" name="max_price" step="1" type="number" {% if request.GET.max_price %}value="{{ request.GET.max_price }}"{% endif %}>
+	    </div>
+	    
+	</div>
 
-		<div id="price-range">
-			<div class="padding-range"><div id="slider-range" class="ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all" aria-disabled="false"><div class="ui-slider-range ui-widget-header ui-corner-all" style="left: 0%; width: 100%;"></div><a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 0%;"></a><a class="ui-slider-handle ui-state-default ui-corner-all" href="#" style="left: 100%;"></a></div></div>
-			<label for="amount">Цена:</label>
-			<input type="text" id="amount">
-			
-		</div>
-		<div class="clearfix"></div>
- </div> -->
-<div class="widget"> 
-			<!-- Headline -->
-			<h3 class="headline">Отобразить</h3><span class="line margin-bottom-30"></span><div class="clearfix"></div>
-			<a href="{{ page.get_absolute_url }}" class="button {% if not request.GET.pre_order %}color{% else %}dark{% endif %}"></i>
-			Все предметы</a> <br>
-			<a href="{{ page.get_absolute_url }}?pre_order=1" class="button {% if request.GET.pre_order == '1' %}color{% else %}dark{% endif %}"><i class="fa fa-gift"></i>На заказ</a>
-			<a href="{{ page.get_absolute_url }}?pre_order=0" class="button {% if request.GET.pre_order == '0' %}color{% else %}dark{% endif %}"><i class="fa fa-check-square-o"></i>Готовые</a>
- </div>
+	<div class="widget margin-top-10">
+	    <h3 class="headline">Отобразить</h3><span class="line"></span>
+	    <div class="clearfix"></div>
+	    <label class="control control--checkbox">
+	        <input {% if request.GET.region %}checked="checked" {% endif %} id="id_region" name="region" type="checkbox" value="{{ request.user.profile.region.id }}">
+	        Товары из моего региона
+	        <div class="control__indicator"></div>
+	    </label>
+	    {% for label, name, value in main_filters %}
+	    <label class="control control--checkbox">
+	        <input {% if name in request.GET %}checked="checked" {% endif %} id="id_{{name}}" name="{{name}}" type="checkbox" value="{{ value }}">{{ label }}
+	        <div class="control__indicator"></div>
+	    </label>
+	    {% endfor %}
+	    <div class="clearfix"></div>
+	</div>
 
+	<div class="widget margin-top-5">
+	    <h3 class="headline">Доставка</h3><span class="line"></span>
+	    <div class="clearfix"></div>
+	    {% for label, name, value in delivery_filters %}
+	    <label class="control control--checkbox">
+	        <input {% if name in request.GET %}checked="checked" {% endif %} id="id_{{name}}" name="{{name}}" type="checkbox" value="{{ value }}">{{ label }}
+	        <div class="control__indicator"></div>
+	    </label>
+	    {% endfor %}
+	    <div class="clearfix"></div>
+	</div>
+
+	<div class="widget margin-top-5">
+	    <h3 class="headline">Оплата</h3><span class="line"></span>
+	    <div class="clearfix"></div>
+	    {% for label, name, value in payment_filters %}
+	    <label class="control control--checkbox">
+	        <input {% if name in request.GET %}checked="checked" {% endif %} id="id_{{name}}" name="{{name}}" type="checkbox" value="{{ value }}">{{ label }}
+	        <div class="control__indicator"></div>
+	    </label>
+	    {% endfor %}
+	    <div class="clearfix"></div>
+	</div>
+	<input type="submit" class="button pull-right" value="Применить"></input>
+</form>
 </div>
 {% endblock %}
 
 
 {% block main %}
-{{ block.super }}
-	{% if products.object_list %}
-	<div class="twelve columns">
-	<form class="product-sorting" role="form">
-	        <select onchange="location.href = this[this.selectedIndex].value;" class="orderby" id="sorting-select">
-	        {% for name, option in settings.SHOP_PRODUCT_SORT_OPTIONS %}
-	        {% if "rating" not in option or settings.SHOP_USE_RATINGS %}
-	        <option{% if option == products.sort_by %} selected{% endif %}
-	            value="{{ category.get_absolute_url }}?sort={{ option }}{{ querystring }}">
-	            {{ name }}
-	        </option>
-	        {% endif %}
-	        {% endfor %}
-	        </select>
-
-	</form>
-	</div>
-	<div class="twelve columns products">
-		{% for product in true_products %}
-		<div class="four shop columns custom_column">
-			<figure class="product">
-				<div class="badges">
-				{% if product.pre_order %}
-					<div class="product-example">Для примера</div>
-				{# {% else %} #}
-					<!--<div class="product-ready">Готовый вариант</div>-->
-				{% endif %}
-				{% if product.on_custom_sale %}
-					<div class="product-discnt">СКИДКА</div>
-				{% endif %}
-				</div>
-				{% get_product_images product as images %}
-				<div class="mediaholder {% if not images or images.count == 1 %}no-anim{%endif%}">
-				<a href="{{ product.get_absolute_url }}">
-					{% if images %}
-					<img alt="" src="{{ MEDIA_URL }}{% thumbnail images.0 250 330 %}">
-						{% if images.count != 1 %}
-						<div class="cover">
-								<img alt="" src="{{ MEDIA_URL }}{% thumbnail images.1 300 380 %}">
-						</div>
-						{% endif %}
-					{% else %}
-					<img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image.jpg' 250 330 %}">
-					{% endif %}
-				</a>
-				<a href="{{ product.get_absolute_url }}" class="product-button"><i class="fa fa-share"></i>Подробнее</a>
-				</div>
-				<a href="{{ product.get_absolute_url }}">
-					<section>
-						<h5>{{ product.title|title|truncatechars:34 }}</h5>
-						<a href="{{ product.user.shop.get_absolute_url }}" class="shopname">{{ product.user.shop.shopname }}</a>
-						<!--<span class="product-category">
-						</span>-->
-						{% if product.on_custom_sale %}
-							<span class="product-price-discount">{{ product.unit_price|rub_currency }}<i>{{ product.price|rub_currency }}</i></span>
-						{% else %}
-						<span class="product-price">{{ product.price|rub_currency }}</span>
-						{% endif %}
-					</section>
-				</a>
-			</figure>
-		</div>
-		{% endfor %}
-		<div class="clearfix"></div>
-		{% if products.paginator.count != 0 %}
-			{% pagination_for products %}
-		{% endif %}
-	</div>
-
-	{% endif %}
-	
-
-
+{% include "includes/products.html" %}
 {% endblock %}
