--- a/theme/templates/registration/password_change_form.html
+++ b/theme/templates/registration/password_change_form.html
@@ -1,47 +1,60 @@
-{% extends "admin/base_site.html" %}
-{% load i18n %}
-{% block userlinks %}
-{% url "django-admindocs-docroot" as docsroot %}{% if docsroot %}
-<li>
-    <a href="{{ docsroot }}">{% trans 'Documentation' %}</a>
-</li>
-{% endif %}
-<li>
-    <a href="{{ root_path }}password_change/">{% trans 'Change password' %}</a>
-</li>
-<li>
-    <a href="{{ root_path }}logout/">{% trans 'Log out' %}</a>
-</li>
-{% endblock %}
+{% extends "admin/base_site.html" %} {% load i18n admin_urls static theme_tags %} 
 
-{% block title %}{% trans 'Password change' %}{% endblock %}
+{% if not is_popup %} 
+{% block breadcrumbs %}
+<ol class="breadcrumb">
+    <li><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a></li>
+</ol>
+{% endblock %} 
+{% endif %} 
 
 {% block content %}
-
-{% if not title %}
-<h1>{% trans 'Password change' %}</h1>
-{% endif %}
-
-<p>{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</p>
-
-<form action="" method="post">{% csrf_token %}
-    <div>
-        <fieldset class="module aligned">
-            <div class="form-row">
-                {{ form.old_password.errors }}
-                <label for="id_old_password" class="required">{% trans 'Old password:' %}</label>{{ form.old_password }}
-            </div>
-            <div class="form-row">
-                {{ form.new_password1.errors }}
-                <label for="id_new_password1" class="required">{% trans 'New password:' %}</label>{{ form.new_password1 }}
-            </div>
-            <div class="form-row">
-                {{ form.new_password2.errors }}
-                <label for="id_new_password2" class="required">{% trans 'Confirm password:' %}</label>{{ form.new_password2 }}
+<div class="container-fluid">
+    <div data-widget-group="group1" class="ui-sortable">
+        <div class="row">
+            <div class="col-sm-offset-3 col-sm-6">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h2>{% trans 'Password change' %}</h2>
+                    </div>
+                    <div class="panel-body">
+                        <p>{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</p>
+                        <form class="form-horizontal" action="" method="post">
+                        {% csrf_token %}
+                            <div class="form-group">
+                                {{ form.old_password.errors }}
+                                <label for="id_old_password" class="col-sm-2 control-label">Старый пароль: </label>
+                                <div class="col-sm-8">
+                                   {{ form.old_password|add_class:"form-control" }}
+                                </div>
+                                <span class="material-input"></span>
+                            </div>
+                            <div class="form-group">
+                                {{ form.new_password1.errors }}
+                                <label for="id_old_password" class="col-sm-2 control-label">{% trans 'New password:' %}</label>
+                                <div class="col-sm-8">
+                                   {{ form.new_password1|add_class:"form-control"  }}
+                                </div>
+                                <span class="material-input"></span>
+                            </div>
+                            <div class="form-group">
+                                {{ form.new_password2.errors }}
+                                <label for="id_old_password" class="col-sm-2 control-label">{% trans 'Confirm password:' %}</label>
+                                <div class="col-sm-8">
+                                   {{ form.new_password2|add_class:"form-control"  }}
+                                </div>
+                                <span class="material-input"></span>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-8 col-sm-offset-2">
+                                    <input type="submit" value="{% trans 'Change my password' %}" class="btn-raised btn-primary btn" />
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="submit-row"><input type="submit" value="{% trans 'Change my password' %}" class="default" /></div>
     </div>
-</form>
-
+</div>
 {% endblock %}
